--- a/public/latest/assets/auth-css/custom-login-2.css
+++ b/public/latest/assets/auth-css/custom-login-2.css
@@ -215,6 +215,14 @@ body {
 
 .login-from .form-group {
     margin-top: 2rem;
+    position: relative;
+}
+
+.login-from .form-group i {
+    position: absolute;
+    right: 1rem;
+    top: 3.8rem;
+    cursor: pointer;
 }
 
 .login-from .form-group .form-control {
@@ -277,12 +285,15 @@ body {
     border-radius: 0.625rem;
     background: #FF9D25;
     box-shadow: 0px 4px 19px 0px rgba(119, 147, 65, 0.30);
-    padding: 0.9375rem 12.9375rem;
+    padding: 0.9375rem 2.9375rem;
     color: #FFF;
     font-size: 1rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    display: block;
+    width: 100%;
+    text-align: center;
 }
 
 .login-four-page-wrap {
@@ -327,5 +338,316 @@ body {
 
 .buttons-group a {
     background: #EFF4FF;
-    color: #2F7AEB!important;
+    color: #2F7AEB !important;
 }
+
+
+
+
+
+
+
+
+/* dark mode css */
+.dark-mode-bttn {
+    z-index: 999999;
+    max-height: 75px;
+    max-width: 42px;
+    min-height: 75px;
+    min-width: 36px;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+    cursor: pointer;
+    background-color: #fff;
+    border: 1px solid #d7def4;
+    border-radius: 30px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 6px;
+    display: flex;
+    position: fixed;
+    top: 50%;
+    bottom: auto;
+    left: auto;
+    right: 2%;
+}
+
+.dark-mode-bttn label {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 1.8rem;
+    height: 1.8rem;
+    border-radius: 50%;
+    background-color: #fff;
+    transition: ease-in-out .3s;
+    cursor: pointer;
+}
+
+.dark-mode-bttn label i {
+    color: #66768E;
+}
+
+.dark-mode-bttn label.active {
+    background-color: #294CFF;
+    transition: ease-in-out .3s;
+}
+
+.dark-mode-bttn label.active i {
+    color: #fff;
+}
+
+.dark-mode-bttn {
+    border-color: rgb(215, 222, 244);
+    background-color: rgb(255, 255, 255);
+}
+
+.dark-mode-bttn label:first-child {
+    background-color: #294CFF !important;
+}
+
+.dark-mode-bttn label:last-child {
+    background-color: transparent !important;
+}
+
+body.dark-mode .dark-mode-bttn label:first-child {
+    background-color: transparent !important;
+}
+
+body.dark-mode .dark-mode-bttn label:first-child i {
+    color: #66768E;
+}
+
+body.dark-mode .dark-mode-bttn label:last-child {
+    background-color: #7289FF !important;
+}
+
+body.dark-mode .dark-mode-bttn label:last-child i {
+    color: #fff;
+}
+
+.dark-ele {
+    display: none !important;
+}
+
+.light-ele {
+    display: inline-block !important;
+}
+
+body.dark-mode .dark-ele {
+    display: inline-block !important;
+}
+
+body.dark-mode .light-ele {
+    display: none !important;
+}
+
+body.dark-mode {
+    background-color: #FFA83F !important;
+}
+
+body.dark-mode p,
+body.dark-mode h3,
+body.dark-mode h1 {
+    color: #0D0D0D !important;
+}
+
+body.dark-mode .login-page-wrapper:before {
+    background-color: #0D0D0D !important;
+}
+
+body.dark-mode .login-box-wrap {
+    border: 1px solid #FFA83F !important;
+    background: #0D0D0D !important;
+    box-shadow: 0px 4px 35px 0px rgba(0, 0, 0, 0.08) !important;
+}
+
+body.dark-mode .login-heading h6 {
+    color: #C5CCD8 !important;
+}
+
+body.dark-mode .login-heading p {
+    color: #8d8d8d !important;
+}
+
+body.dark-mode .login-from .form-group label,
+body.dark-mode .login-box-wrap h1 {
+    color: #fff !important;
+}
+
+body.dark-mode .buttons-group a {
+    background-color: #181818 !important;
+    color: #FFA83F !important;
+}
+
+
+body.dark-mode .login-from .form-group .form-control {
+    border: 1px solid #ADADAD !important;
+    background: #0D0D0D !important;
+    color: #fff !important;
+}
+
+body.dark-mode .login-from .form-group i {
+    color: #fff !important;
+}
+
+body.dark-mode .checbox-wrap .form-check-label {
+    color: #66768E !important;
+}
+
+body.dark-mode .submit-button .btn-submit {
+    background: #FFA83F !important;
+    box-shadow: 0px 4px 19px 0px rgba(119, 147, 65, 0.30) !important;
+    color: #0D0D0D !important;
+}
+
+body.dark-mode .dark-mode-bttn {
+    border-color: #66768E !important;
+    background-color: #0D0D0D !important;
+}
+
+body.dark-mode .login-four-page-wrap-dark.login-four-page-wrap:before {
+    background-color: #1A1A1A !important;
+}
+
+body.dark-mode .login-four-page-wrap-dark .login-box-wrap {
+    border: 1px solid var(--neutral-color-neutral-70, #2F3A4C) !important;
+    background: #0D0D0D !important;
+    box-shadow: 0px 4px 35px 0px rgba(0, 0, 0, 0.08) !important;
+}
+
+body.dark-mode .login-four-page-wrap .buttons-group a,
+body.dark-mode .login-four-page-wrap .checbox-wrap a,
+body.dark-mode .login-four-page-wrap .login-heading h6 span,
+body.dark-mode .login-four-page-wrap .login-heading a {
+    color: #7289FF !important;
+}
+
+body.dark-mode .submit-button .btn-submit {
+    background: var(--others-dark-mode-btn, #7289FF)!important;
+    box-shadow: 0px 4px 19px 0px rgba(119, 147, 65, 0.30)!important;
+}
+
+/* dark mode css end */
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 320px) and (max-width: 575px) {
+    .login-box-wrap {
+        margin-top: 4rem;
+    }
+
+    .login-header {
+        margin-bottom: 1rem;
+    }
+
+    .login-box-wrap {
+        padding: 1.8rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .login-heading h6 {
+        font-size: 1rem;
+    }
+
+    .login-box-wrap h1 {
+        margin-bottom: 0.5rem;
+        font-size: 2rem;
+    }
+
+    .login-from .form-group {
+        margin-top: 1rem;
+    }
+
+    .login-from .form-group .form-control {
+        height: 2.8rem;
+    }
+
+    .login-four-page-wrap .submit-button .btn-submit {
+        width: 100%;
+    }
+
+    .buttons-group a:first-child {
+        min-width: 11.5rem;
+    }
+
+    .buttons-group a img {
+        margin-right: 0.2rem !important;
+    }
+
+    .buttons-group a {
+        padding: 0 .4rem !important;
+    }
+
+    .login-four-page-wrap::before {
+        width: 100%;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+    .login-box-wrap {
+        margin-top: 4rem;
+    }
+
+    .login-header {
+        margin-bottom: 1rem;
+    }
+
+    .login-box-wrap {
+        padding: 1.8rem;
+    }
+
+    .login-heading h6 {
+        font-size: 1rem;
+    }
+
+    .login-box-wrap h1 {
+        margin-bottom: 0.5rem;
+        font-size: 2rem;
+    }
+
+    .login-from .form-group {
+        margin-top: 1rem;
+    }
+
+    .login-from .form-group .form-control {
+        height: 2.8rem;
+    }
+
+    .login-four-page-wrap .submit-button .btn-submit {
+        width: 100%;
+    }
+
+    .login-box-wrap {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .login-four-page-wrap::before {
+        width: 100%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .login-box-wrap h1 {
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {}
+
+@media (min-width: 1200px) and (max-width: 1360px) {}
+
+@media (min-width: 1361px) {}
