--- a/public/latest/assets/auth-css/custom-login.css
+++ b/public/latest/assets/auth-css/custom-login.css
@@ -99,13 +99,13 @@ body {
     font-family: "Inter", sans-serif;
 }
 
-.login-page-wrapper{
+.login-page-wrapper {
     position: relative;
     z-index: 1;
     padding: 3rem 0;
 }
 
-.login-page-wrapper:before{
+.login-page-wrapper:before {
     position: absolute;
     content: "";
     right: 0;
@@ -123,7 +123,7 @@ body {
     left: 0;
     top: 0;
     width: 100%;
-    
+
 }
 
 .left-side-form {
@@ -150,6 +150,14 @@ body {
 
 .left-side-form .form-group {
     margin-top: 1.25rem;
+    position: relative;
+}
+
+.left-side-form .form-group i {
+    position: absolute;
+    right: 1rem;
+    top: 2.3rem;
+    cursor: pointer;
 }
 
 .left-side-form .form-group label {
@@ -214,7 +222,7 @@ body {
 }
 
 .register {
-    color: var(--gray-500, #667085); 
+    color: var(--gray-500, #667085);
     font-size: 0.875rem;
     font-style: normal;
     font-weight: 400;
@@ -223,7 +231,234 @@ body {
     text-align: center;
 }
 
-.register a{
+.register a {
     color: #294CFF;
     font-weight: 600;
 }
+
+
+
+
+
+
+/* dark mode css */
+.dark-mode-bttn {
+    z-index: 999999;
+    max-height: 75px;
+    max-width: 42px;
+    min-height: 75px;
+    min-width: 36px;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+    cursor: pointer;
+    background-color: #fff;
+    border: 1px solid #d7def4;
+    border-radius: 30px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 6px;
+    display: flex;
+    position: fixed;
+    top: 50%;
+    bottom: auto;
+    left: auto;
+    right: 2%;
+}
+
+.dark-mode-bttn label {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 1.8rem;
+    height: 1.8rem;
+    border-radius: 50%;
+    background-color: #fff;
+    transition: ease-in-out .3s;
+    cursor: pointer;
+}
+
+.dark-mode-bttn label i {
+    color: #66768E;
+}
+
+.dark-mode-bttn label.active {
+    background-color: #294CFF;
+    transition: ease-in-out .3s;
+}
+
+.dark-mode-bttn label.active i {
+    color: #fff;
+}
+
+.dark-mode-bttn {
+    border-color: rgb(215, 222, 244);
+    background-color: rgb(255, 255, 255);
+}
+
+.dark-mode-bttn label:first-child {
+    background-color: #294CFF !important;
+}
+
+.dark-mode-bttn label:last-child {
+    background-color: transparent !important;
+}
+
+body.dark-mode .dark-mode-bttn label:first-child {
+    background-color: transparent !important;
+}
+
+body.dark-mode .dark-mode-bttn label:first-child i {
+    color: #66768E;
+}
+
+body.dark-mode .dark-mode-bttn label:last-child {
+    background-color: #7289FF !important;
+}
+
+body.dark-mode .dark-mode-bttn label:last-child i {
+    color: #fff;
+}
+
+.dark-ele {
+    display: none !important;
+}
+
+.light-ele {
+    display: inline-block !important;
+}
+
+body.dark-mode .dark-ele {
+    display: inline-block !important;
+}
+
+body.dark-mode .light-ele {
+    display: none !important;
+}
+
+body.dark-mode {
+    background-color: #0D0D0D !important;
+}
+
+body.dark-mode p {
+    color: #A6B1C4 !important;
+}
+
+body.dark-mode h3,
+body.dark-mode h1 {
+    color: #fff !important;
+}
+
+body.dark-mode .login-page-wrapper:before {
+    background-color: #0B35CE !important;
+}
+
+
+body.dark-mode .form-group label {
+    color: #D2DEEF !important;
+}
+
+body.dark-mode .form-group .form-control { 
+    border: 1px solid var(--others-dark-stroke, #1A1A1A)!important;
+    background: #0D0D0D!important;
+    color: #fff !important;
+}
+
+body.dark-mode .form-group i {
+    color: #66768E !important;
+}
+
+body.dark-mode .checbox-wrap .form-check-label {
+    color: #fff !important;
+}
+
+body.dark-mode .register a,
+body.dark-mode .form-footer-text a{
+    color: #7289FF!important;
+}
+
+body.dark-mode .submit-button .btn-submit {
+    background: #7289FF !important;
+    box-shadow: 0px 4px 19px 0px rgba(119, 147, 65, 0.30) !important;
+    color: #0D0D0D !important;
+}
+
+body.dark-mode .dark-mode-bttn {
+    border-color: #66768E !important;
+    background-color: #0D0D0D !important;
+}
+
+
+body.dark-mode .form-check-input{
+    background-color: transparent!important;
+    border-color: #66768E!important;
+}
+/* dark mode css end */
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 320px) and (max-width: 575px) {
+    .login-page-wrapper::before {
+        background-color: transparent;
+        width: 0;
+    }
+
+    .left-side-form {
+        margin: 0 auto;
+        margin-top: 4rem;
+        width: 90%;
+    }
+
+    .right-side-image {
+        display: none;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+    .login-page-wrapper::before {
+        background-color: transparent;
+        width: 0;
+    }
+
+    .left-side-form {
+        margin: 0 auto;
+        margin-top: 4rem;
+        width: 90%;
+    }
+
+    .right-side-image {
+        display: none;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .login-page-wrapper::before {
+        background-color: transparent;
+        width: 0;
+    }
+
+    .left-side-form {
+        margin: 0 auto;
+        margin-top: 4rem;
+        width: 90%;
+    }
+
+    .right-side-image {
+        display: none;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {}
+
+@media (min-width: 1200px) and (max-width: 1360px) {}
+
+@media (min-width: 1361px) {}
