--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -1327,6 +1327,18 @@
     .dns-left-sidebar .setup-step .step-box span{
         outline-color: #2F3A4C;
     }
+    .paid-student-name .txt,
+    .pay-details-box-invoice,
+    .payment-name-box,
+    .payment-details-title{
+        border: 1px solid var(--others-dark-stroke, #1A1A1A)!important;
+        background: #0D0D0D!important;
+        box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.10), 0px 0px 2px 0px rgba(37, 45, 52, 0.20)!important;
+    }
+
+    .pay-details-box-invoice table tr th{
+        background-color: #2F3A4C;
+    }
 
 }
 
@@ -1411,6 +1423,8 @@
             color: #fff;
         }
     }
+
+  
 }
 
 .dark-mode-bttn {
