--- a/public/latest/assets/admin-css/style.css
+++ b/public/latest/assets/admin-css/style.css
@@ -193,3 +193,7 @@ body {
 .form-submit-bttns .btn-submit:hover {
   background-color: #252525;
 }
+
+.invalid-feedback {
+  display: block !important;
+}
