--- a/scss/subscription.scss
+++ b/scss/subscription.scss
@@ -344,6 +344,9 @@
         grid-gap: .5rem;
     }
 
+    .subscription-table-wrap.subs-table table {
+        display: block;
+    }
     .subscription-table-wrap table {
         width: 100%;
         overflow-x: scroll;
