--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -506,7 +506,7 @@
   color: #06CA68 !important;
 }
 .dark-mode .enroll-course-list .list-wrap table tr td a {
-  color: #7289FF !important;
+  color: #fff !important;
 }
 .dark-mode .student-profile-update-page .own-profile-box .custom-padding .profile-picture-box,
 .dark-mode .student-profile-update-page .own-profile-box {
@@ -823,11 +823,13 @@
 .dark-mode .course-create-step-page-wrap .course-create-step-wrap .step-box.current p {
   color: #5672FF !important;
 }
+.dark-mode .back-next-bttns .btn-primary,
 .dark-mode .back-next-bttns a:last-child {
   background-color: #5672FF !important;
   border-color: #5672FF !important;
   color: #344054 !important;
 }
+.dark-mode .back-next-bttns .btn-secondary,
 .dark-mode .back-next-bttns a:first-child {
   border: 1px solid #2D343E !important;
   background: #0D0D0D !important;
@@ -984,7 +986,12 @@
 .dark-mode .user-details-box {
   color: #d7def4;
 }
-.dark-mode .user-details-box h2, .dark-mode .user-details-box h3, .dark-mode .user-details-box h4, .dark-mode .user-details-box h5, .dark-mode .user-details-box h6, .dark-mode .user-details-box p {
+.dark-mode .user-details-box h2,
+.dark-mode .user-details-box h3,
+.dark-mode .user-details-box h4,
+.dark-mode .user-details-box h5,
+.dark-mode .user-details-box h6,
+.dark-mode .user-details-box p {
   color: #d7def4;
 }
 .dark-mode .user-expperience-box .media h6 {
@@ -1028,6 +1035,37 @@
 }
 .dark-mode .pay-details-box-invoice table tr th {
   background-color: #2F3A4C;
+  border-color: #1A1A1A !important;
+  color: #d7def4 !important;
+}
+.dark-mode .user-expperience-box .brdr-bttm {
+  border-color: #1A1A1A !important;
+}
+.dark-mode .pay-details-box-invoice table tr td {
+  color: #d7def4 !important;
+  border-color: #1A1A1A !important;
+}
+.dark-mode .paid-student-name .txt ul li a,
+.dark-mode .paid-student-name .txt ul li,
+.dark-mode .payment-name-box span {
+  color: #d7def4 !important;
+}
+.dark-mode .paid-student-name {
+  box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.1), 0px 0px 2px 0px rgba(37, 45, 52, 0.2) !important;
+}
+.dark-mode .paid-student-name .txt ul li img {
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+}
+.dark-mode .pay-details-box-invoice .download-inv-box a {
+  background-color: #2F3A4C;
+  border-color: #1A1A1A !important;
+  color: #d7def4 !important;
+}
+.dark-mode .pay-details-box-invoice .download-inv-box a:last-child {
+  background-color: #7289FF !important;
+}
+.dark-mode .user-add-form-wrap-2 .form-group i {
+  color: #d7def4 !important;
 }
 
 .dark-mode-bttn {
