--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -651,6 +651,7 @@ span.finsihLesson {
   justify-content: flex-end;
   margin-top: 2.5rem;
 }
+.back-next-bttns .btn,
 .back-next-bttns a {
   margin-left: 1rem;
   border-radius: 0.375rem;
@@ -665,11 +666,14 @@ span.finsihLesson {
   font-weight: 500;
   line-height: 1.25rem;
   transition: ease-in 0.3s;
+  border: 0;
 }
+.back-next-bttns .btn:hover,
 .back-next-bttns a:hover {
   background-color: #294CFF;
   color: #fff;
 }
+.back-next-bttns .btn:last-child,
 .back-next-bttns a:last-child {
   background-color: #294CFF;
   color: #fff;
@@ -1510,8 +1514,8 @@ span.finsihLesson {
 }
 
 .paid-student-name {
-  fill: #FFF;
   box-shadow: 5px 0px 30px rgba(185, 212, 208, 0.5);
+  margin-top: 1.5rem;
 }
 .paid-student-name .avatar img {
   display: block;
