--- a/public/latest/assets/admin-css/header.css
+++ b/public/latest/assets/admin-css/header.css
@@ -176,6 +176,11 @@
   padding: 0;
 }
 
+.navbar-toggler i {
+  color: #294CFF;
+  font-size: 1.2rem;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .header-area {
     padding: 0;
