--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -761,6 +761,7 @@ span.finsihLesson {
     @include m.df(flex-end);
     margin-top: 2.5rem;
 
+    .btn,
     a {
         margin-left: 1rem;
         border-radius: 0.375rem;
@@ -775,6 +776,7 @@ span.finsihLesson {
         font-weight: 500;
         line-height: 1.25rem;
         transition: ease-in .3s;
+        border: 0;
 
         &:hover {
             background-color: #294CFF;
@@ -1730,9 +1732,8 @@ span.finsihLesson {
 }
 
 .paid-student-name {
-    fill: #FFF;
     box-shadow: 5px 0px 30px rgba(185, 212, 208, 0.50);
-
+    margin-top: 1.5rem;
     .avatar {
         img {
             display: block;
